# omniflow

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_GUIDE.md  FRONTEND_AUDIT.md  Makefile  context.md  docker-compose.yml  package-lock.json  patch_cragr.py  railway.toml  render.yaml  update.md
apps/api/: .dockerignore  .env.example  .env.production.example  Dockerfile  alembic.ini  apply_migrations.sql  gunicorn.conf.py  patch_cragr.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_bank_tables.py  003_production_ready.py  004_multi_assets.py  005_ai_intelligence.py  006_ai_advisor.py  007_profiles_projects.py  008_expand_enums.py  009_notifications.py  010_debts.py  011_stock_enrichment.py  012_realestate_enrichment.py  013_crypto_enrichment.py  014_realestate_geocoding.py  015_user_alerts.py  016_watchlists.py  017_retirement.py  018_heritage.py  019_fee_negotiator.py  020_fiscal_radar.py  021_wealth_autopilot.py  022_digital_vault.py  023_image_url_text.py  024_financial_calendar.py  025_nova_omniscient.py  (+3 more)
apps/api/app/: __init__.py  main.py
apps/api/tests/: __init__.py  conftest.py  test_amortization.py  test_auth.py  test_cache.py  test_cashflow_projection.py  test_categorizer.py  test_cicd.py  test_crypto_b4.py  test_debts.py  test_deployment.py  test_digital_vault.py  test_encryption.py  test_fee_negotiator.py  test_feedback_changelog.py  test_fiscal_radar.py  test_health.py  test_heritage.py  test_normalizer.py  test_performance_production.py  test_push_notifications.py  test_realestate_analytics.py  test_retirement.py  test_rgpd_audit.py  test_stock_analytics.py  test_wealth_autopilot.py
(+342 files in other folders)
