[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniflow-api"
version = "0.5.0"
description = "OmniFlow Backend — FastAPI + Woob Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "bcrypt>=4.1.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "email-validator>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "cryptography>=42.0.0",
    "websockets>=12.0",
    "woob>=3.6",
    "chompjs>=1.2.0",
    "schwifty>=2024.1.1",
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "sse-starlette>=2.0.0",
    "pywebpush>=2.0.0",
    "gunicorn>=21.2.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*", "app/__pycache__/*"]

[tool.coverage.report]
fail_under = 30
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
